--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document1</title>
 </head>
 <body>
-    <script src="../Glo Academy/script.js"></script>
+    <script src="./js/script.js"></script>
 </body>
 </html>
