--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
 </section>
 <!--<script src="./script/oop.js"></script>-->
-<script src="./script/script.js"></script>
+<!-- <script src="./script/script.js"></script> -->
 <script src="./js/script.js"></script>
 </body>
 </html>
