--- a/script/Отдельная папка/index.html
+++ b/script/Отдельная папка/index.html
@@ -6,6 +6,10 @@
     <title>Document</title>
 </head>
 <body>
+    <p class="welcome"></p>
+    <p class="today"></p>
+    <p class="timer"></p>
+    <p class="count"></p>
     <script src="./js.js"></script>
 </body>
 </html>
