--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 					</div>
 
 				</div>
-				<div class="col-md-1 col-sm-2 col-3">
+				<div class="col-md-1 col-sm-2 col-3 menu-div">
 					<div class="menu">
 						<img src="images/menu.svg" alt=""><br>
 						<small>Меню</small>
