--- a/index.html
+++ b/index.html
@@ -1,13 +1,40 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./styles.css">
     <title>Document</title>
 </head>
+
 <body>
-    <div class="container"> 
-            <h1>Введите сумму: </h1>
+    <div class="container">
+        <div class="latest">
+            <span class="latest-span-dol">Доллар</span>
+            <span class="dol-total">0</span>
+            <span class="latest-span-dol">Евро</span>
+            <span class="eur-total">0</span>
+        </div>
+        <div class="input-block">
+            <span class="input-span">Введите сумму в:</span>
+            <select name="" id="select">
+                <option value="rub">RUB</option>
+                <option value="usd">USD</option>
+                <option value="eur">EUR</option>
+            </select>
+            <input type="text" class="input-item input-rub" placeholder="₽₽₽">
+        </div>
+        <div class="out-block">
+            <span class="dol-span">Доллар</span>
+            <input type="text" class="input-item input-dol" placeholder="$$$" readonly>
+            <span class="eur-span">Евро</span>
+            <input type="text" class="input-item input-eur" placeholder="€€€" readonly>
+        </div>
+            <button id='convert' type="submit">Конвертировать</button>
+        
     </div>
+    <script src="./script.js"></script>
 </body>
+
 </html>
